--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-/.bundle/
-/.yardoc
-/Gemfile.lock
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
+# Ignore Gemfile.lock
+*.lock
 
 # Ignore generated .gem files
 *.gem
